complete garbage order ui (create garbage ui, restore order, hard delete order, change multi order) admin

--- a/views/admin/pages/account/create.view.ejs
+++ b/views/admin/pages/account/create.view.ejs
@@ -45,24 +45,27 @@
               <div class="col-12">
                 <div class="form-group mb-4">
                   <label for="fullName" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Họ & Tên</label
-                  >
+                    ><span class="text-danger"><b>*</b></span>
+                    Họ & Tên
+                  </label>
                   <input type="text" name="fullName" required id="fullName" class="form-control" />
                 </div>
               </div>
               <div class="col-6 mb-4">
                 <div class="form-group">
                   <label for="email" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Địa chỉ email</label
-                  >
+                    ><span class="text-danger"><b>*</b></span>
+                    Địa chỉ email
+                  </label>
                   <input type="email" name="email" required id="email" class="form-control" />
                 </div>
               </div>
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="password" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Mật khẩu</label
-                  >
+                    ><span class="text-danger"><b>*</b></span>
+                    Mật khẩu
+                  </label>
                   <input
                     type="password"
                     name="password"
@@ -85,8 +88,9 @@
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="phone" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Số điện thoại</label
-                  >
+                    ><span class="text-danger"><b>*</b></span>
+                    Số điện thoại
+                  </label>
                   <input type="phone" name="phone" required id="phone" class="form-control" />
                 </div>
               </div>
@@ -107,16 +111,18 @@
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="birthDay" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Ngày sinh</label
-                  >
+                    ><span class="text-danger"><b>*</b></span>
+                    Ngày sinh
+                  </label>
                   <input type="date" name="birthDay" id="birthDay" class="form-control" />
                 </div>
               </div>
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="roleId" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Phân quyền</label
-                  >
+                    ><span class="text-danger"><b>*</b></span>
+                    Phân quyền
+                  </label>
                   <select name="roleId" id="roleId" class="form-control">
                     <option selected disabled>-- Lựa chọn quyền --</option>
                     <% roleList.forEach(role => { %>
@@ -128,8 +134,9 @@
               <div class="col-12">
                 <div class="form-group mb-4">
                   <label for="status" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Trạng thái</label
-                  >
+                    ><span class="text-danger"><b>*</b></span>
+                    Trạng thái
+                  </label>
                   <select name="status" id="status" class="form-control">
                     <option selected disabled>-- Lựa chọn trạng thái --</option>
                     <option value="active">🟢 Hoạt động</option>
