--- a/views/admin/pages/role/create.view.ejs
+++ b/views/admin/pages/role/create.view.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%-include("../../partials/seoMeta.view.ejs", { pageTitle: pageTitle}) %>
-    
+
     <!-- Style Library & Framework -->
     <link
       rel="stylesheet"
@@ -34,8 +34,9 @@
             <div class="col-12">
               <div class="form-group mb-4">
                 <label for="title" class="fw-bold"
-                  ><span class="text-danger"><b>*</b></span> Tên quyền</label
-                >
+                  ><span class="text-danger"><b>*</b></span>
+                  Tên quyền
+                </label>
                 <input type="text" name="title" id="title" required class="form-control" />
               </div>
             </div>
@@ -43,8 +44,9 @@
             <div class="col-12">
               <div class="form-group mb-4">
                 <label for="description" class="fw-bold"
-                  ><span class="text-danger"><b>*</b></span> Mô tả quyền</label
-                >
+                  ><span class="text-danger"><b>*</b></span>
+                  Mô tả quyền
+                </label>
                 <textarea
                   name="description"
                   id="description"
