--- a/views/admin/pages/account/account.view.ejs
+++ b/views/admin/pages/account/account.view.ejs
@@ -67,8 +67,9 @@
                   <a
                     href="<%= prefixAdmin %>/accounts/create"
                     class="btn btn-primary w-100 float-end mb-2"
-                    ><i class="bi bi-plus-lg me-1"></i>Thêm mới tài khoản</a
-                  >
+                    ><i class="bi bi-plus-lg me-1"></i>
+                    Thêm mới tài khoản
+                  </a>
                   <% } %>
                 </div>
               </div>
