--- a/views/admin/pages/category/update.view.ejs
+++ b/views/admin/pages/category/update.view.ejs
@@ -40,8 +40,9 @@
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="title" class="fw-bold"
-                    ><span class="text-danger"><b>*</b></span> Tiêu đề</label
-                  >
+                    ><span class="text-danger"><b>*</b></span>
+                    Tiêu đề
+                  </label>
                   <input
                     type="text"
                     value="<%= category.title %>"
@@ -55,7 +56,7 @@
               <div class="col-6">
                 <div class="form-group mb-4">
                   <label for="parent_id" class="fw-bold">Danh mục cha</label>
-                  <!-- <input type="text" name="parent_id" id="parent_id" class="form-control" /> -->
+                  <%# <input type="text" name="parent_id" id="parent_id" class="form-control" /> %>
                   <select name="parent_id" id="parent_id" class="form-control">
                     <option disabled>-- Chọn danh mục cha --</option>
                     <% if(categoryList.length > 0) {%>
@@ -68,8 +69,8 @@
                 <div class="form-group mb-4">
                   <label for="description" class="fw-bold">Mô tả</label>
                   <textarea name="description" id="description" rows="5" class="form-control">
-<%= category.description %></textarea
-                  >
+                    <%= category.description %>
+                  </textarea>
                 </div>
               </div>
               <div class="col-12">
