--- a/views/admin/pages/role/update.view.ejs
+++ b/views/admin/pages/role/update.view.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%-include("../../partials/seoMeta.view.ejs", { pageTitle: pageTitle}) %>
-    
+
     <!-- Style Library & Framework -->
     <link
       rel="stylesheet"
@@ -38,8 +38,8 @@
             <div class="col-12">
               <div class="form-group mb-4">
                 <label for="title" class="fw-bold"
-                  ><span class="text-danger"><b>*</b></span> Tên quyền</label
-                >
+                  ><span class="text-danger"><b>*</b></span> Tên quyền
+                </label>
                 <input
                   type="text"
                   name="title"
@@ -54,11 +54,12 @@
             <div class="col-12">
               <div class="form-group mb-4">
                 <label for="description" class="fw-bold"
-                  ><span class="text-danger"><b>*</b></span> Mô tả quyền</label
-                >
+                  ><span class="text-danger"><b>*</b></span>
+                  Mô tả quyền
+                </label>
                 <textarea name="description" id="description" rows="5" class="form-control">
-<%= role.description %></textarea
-                >
+                  <%= role.description %>
+                </textarea>
               </div>
             </div>
           </div>
