complete order detail ui (show order detail, search and pagination product) admin

--- a/public/admin/styles/pages/dashboard/dashboard.css
+++ b/public/admin/styles/pages/dashboard/dashboard.css
@@ -2,6 +2,8 @@
   width: 140px;
   aspect-ratio: 1/1;
   object-fit: contain;
+  border: 1px solid var(--secondary-color-admin);
+  padding: 5px;
 }
 
 @media screen and (max-width: 768px) {
