--- a/views/admin/pages/order/order.view.ejs
+++ b/views/admin/pages/order/order.view.ejs
@@ -158,8 +158,6 @@
                               <% } else if (order.status === 'shipping') { %>
                                 style="color: var(--primary-color-admin); border-color: var(--primary-color-admin)"
                               <% } else if (order.status === 'delivered') { %>
-                                style="color: var(--secondary-color-admin); border-color: var(--secondary-color-admin)"
-                              <% } else if (order.status === 'paid') { %>
                                 style="color: var(--success-color-admin); border-color: var(--success-color-admin)"
                               <% } else if (order.status === 'cancelled') { %>
                                 style="color: var(--error-color-admin); border-color: var(--error-color-admin)"
@@ -194,17 +192,9 @@
                                 <% if (order.status === 'delivered') { %> selected <% } %>
                                 value="delivered"
                                 class="text-light"
-                                style="background: var(--secondary-color-admin)"
-                              >
-                                Đã giao
-                              </option>
-                              <option
-                                <% if (order.status === 'paid') { %> selected <% } %>
-                                value="paid"
-                                class="text-light"
                                 style="background: var(--success-color-admin)"
                               >
-                                Đã thanh toán
+                                Đã giao
                               </option>
                               <option
                                 <% if (order.status === 'cancelled') { %> selected <% } %>
@@ -227,7 +217,7 @@
                             <i class="bi bi-trash3 me-1"></i>Xóa
                           </button>
                           <a
-                            href="<%= prefixAdmin %>/orders/<%= order._id %>"
+                            href="<%= prefixAdmin %>/orders/detail/<%= order._id %>"
                             class="btn btn-outline-black text-black border-black btn-sm"
                             >Chi tiết<i class="bi bi-arrow-right-short ml-1"></i></a>
                         </td>
