--- a/views/admin/partials/sider.view.ejs
+++ b/views/admin/partials/sider.view.ejs
@@ -103,6 +103,14 @@
             <div class="sb-nav-link-icon"><i class="bi bi-bag-check-fill"></i></div>
             Đơn hàng
           </a>
+          <a
+            class="text-white d-flex gap-2 nav-link sidebar-nav-link"
+            sidebar-number="3"
+            href="<%= prefixAdmin %>/payments"
+          >
+            <div class="sb-nav-link-icon"><i class="fa-solid fa-credit-card"></i></div>
+            Thanh toán
+          </a>
           <!-- <a
             class="text-white d-flex gap-2 nav-link sidebar-nav-link"
             sidebar-number="5"
