--- a/views/admin/pages/user/user.view.ejs
+++ b/views/admin/pages/user/user.view.ejs
@@ -35,7 +35,7 @@
           </div>
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"></div>
           <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-            <%#-include("../../partials/search.view.ejs", { placeholder: "Nhập tên tài khoản..."})
+            <%-include("../../partials/search.view.ejs", { placeholder: "Nhập tên người dùng..."})
             %>
           </div>
         </div>
@@ -46,7 +46,7 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col-lg-4 col-md-4 col-12">
-                  <%#-include("../../partials/statusFilter.view.ejs") %>
+                  <%-include("../../partials/statusFilter.view.ejs") %>
                 </div>
               </div>
             </div>
@@ -55,7 +55,7 @@
 
         <div class="card mb-3">
           <div class="title-font card-header">
-            Danh sách (trang hiện tại: <%#= objPagination.currentPage %>)
+            Danh sách (trang hiện tại: <%= objPagination.currentPage %>)
           </div>
           <div class="card-body">
             <div class="container-fluid">
@@ -67,7 +67,7 @@
                 <div class="col-lg-4 col-12">
                   <% if(roleAuth.permission.includes("account-add")) { %>
                   <a
-                    href="<%= prefixAdmin %>/accounts/create"
+                    href="<%= prefixAdmin %>/users/create"
                     class="btn btn-primary w-100 float-end mb-2"
                     ><i class="bi bi-plus-lg me-1"></i>
                     Thêm mới tài khoản
@@ -190,7 +190,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-9 col-md-9 col-12">
-              <%#-include("../../partials/pagination.view.ejs") %>
+              <%-include("../../partials/pagination.view.ejs") %>
             </div>
             <div class="col-lg-3 col-md-3 col-12">
               <a href="<%= prefixAdmin %>/users/garbage" class="btn btn-primary float-end"
